--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
       <a href="#"><i class="fa-brands fa-instagram"></i></a>
     </p>
   </footer>
-  <!--<script src="navbar-scroll.js"></script>-->
+  <script src="navbar-scroll.js"></script>
 </body>
 
 </html>
